chore: style update

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <head>
-    <base href="https://websim.ai/c/portfolio/" />
     <title>Sem Gebresilassie's Matrix of Code</title>
     <link rel="stylesheet" href="./styles.css" title="styles" />
   </head>
@@ -31,7 +30,7 @@
         <li>Expert in ReactJS, VueJS, NodeJS, and Angular</li>
         <li>Component-based UIs specialist</li>
         <li>Full-stack development proficiency</li>
-        <li>BSc. Science from Metropolia University of Applied Sciences</li>
+        <li>BSc. from Metropolia University of Applied Sciences</li>
       </ul>
     </div>
     <script src="./script.js"></script>
