feat add terminal

--- a/index.html
+++ b/index.html
@@ -34,6 +34,30 @@
         <li>BSc. from Metropolia University of Applied Sciences</li>
       </ul>
     </div>
+
+    <div id="skills-container">
+      <div class="skill-pill">JavaScript</div>
+      <div class="skill-pill">TypeScript</div>
+      <div class="skill-pill">React</div>
+      <div class="skill-pill">Vue.js</div>
+      <div class="skill-pill">Node.js</div>
+      <div class="skill-pill">Angular</div>
+      <div class="skill-pill">HTML5</div>
+      <div class="skill-pill">CSS3</div>
+      <div class="skill-pill">Git</div>
+      <div class="skill-pill">RESTful APIs</div>
+    </div>
+
+    <div id="terminal">
+      <div id="terminal-container">
+        <div id="terminal-output"></div>
+        <div id="terminal-input-line">
+          <span class="prompt">$ </span>
+          <input type="text" id="terminal-input" autofocus />
+        </div>
+      </div>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
