--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <div id="content">
       <h1 class="glow">Sem Gebresilassie: Software development professional</h1>
       <div id="resume"></div>
-      <div id="keyboard-hint">Use ← → arrow keys to adjust details</div>
+      <div id="keyboard-hint">
+        Use &#8592; &#8594; arrow keys to adjust details
+      </div>
     </div>
     <div id="gif-container"></div>
     <div id="slider-container">
