chore: add sale indicators

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div id="gif-container"></div>
     <div id="slider-container">
       <input type="range" min="0" max="100" value="0" id="slider" />
+      <div class="sale-indicator">
+        <p>Soft sale</p>
+        <p>Hard sale</p>
+      </div>
     </div>
 
     <div id="cv-icon">
