--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
       </div>
     </div>
 
+    <div class="control-container">
+      <button id="soundButton">🐦🌿</button>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
