--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="UTF-8" />
     <title>Sem Gebresilassie's Matrix of Code</title>
     <link rel="stylesheet" href="./styles.css" title="styles" />
   </head>
