--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="skill-pill">JavaScript</div>
       <div class="skill-pill">TypeScript</div>
       <div class="skill-pill">React</div>
-      <div class="skill-pill">Vue.js</div>
+      <div class="skill-pill">NextJs</div>
       <div class="skill-pill">Node.js</div>
       <div class="skill-pill">Angular</div>
       <div class="skill-pill">HTML5</div>
